2012-12-28  Araki Ken  <arakiken@users.sf.net>

	* x_picture.[ch]: The inline picture which have the same file_path
	  is shared.

	* x_draw_str.c: The position of drawing inline pictures following
	  US ASCII characters is fixed.

	* ml_vt100_parser.c: The format of "show_picture" of configuration
	  protocol is changed from "WxH clip WxH+X+Y" to "WxH WxH+X+Y".

	* doc/ja/README.w3m: Added.

	* tool/mlimgloader/gdk-pixbuf.c, xlib/x_imagelib.c:
	  Remote access with curl is supported.

	* tool/mlimgloader/gdiplus.c: Remote access with URLMoniker is supported.

2012-12-24  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: "show_picture" of configuration protocol
	  accepts "clip WxH+X+Y" which clips region of the specified picture.

2012-12-23  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: {save|restore}_cursor() aren't called in
	  CSI ? 1047 h and CSI ? 1047 l.

2012-12-22  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: if(read() > 0) -> while(read() > 0)

	* x_screen.c: Memory leak in x_set_button3_behavior() is fixed.

2012-12-21  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: execv() -> execvp() in open_button3_command().

	* kik_args.c: kik_arg_str_to_array() parsed "\ " as a normal space
	  character not as an argument separator.

	* man/mlterm.1, README.ja: Updated.

2012-12-20  Araki Ken  <arakiken@users.sf.net>

	* x_im_candidate_screen.c, x_im_status_screen.c:
	  Compilation error is fixed.

2012-12-19  Araki Ken  <arakiken@users.sf.net>

	* configure.in, mlterm/Makefile.in, xwindow/Makefile.in,
	  ml_config_menu.[ch], xlib/x_imagelib.c:
	  --disable-use-tools option is added to configure.

2012-12-18  Araki Ken  <arakiken@users.sf.net>

	* x_draw_string.c:
	  "xfont->is_proportional && ! xfont->is_var_col_width" is replaced by
	  draw_alone of x_calculate_char_width().

	* xlib/x_font.c:
	  Whether the width of U+2580 - U+259f whose width is ambiguous
	  is the same as font->width or not is checked explicitly, because