@@ -1,5 +1,11 @@
 2012-12-28  Araki Ken  <arakiken@users.sf.net>
 
+	* ml_config_menu.c, ml_pty_pipewin32.c, mlimgloader/gdiplus.cpp,
+	  win32/x_imagelib.c: STARTF_FORCEOFFFEEDBACK is added to STARTUPINFO
+	  for CreateProcess().
+
+2012-12-28  Araki Ken  <arakiken@users.sf.net>
+
 	* x_picture.[ch]: The inline picture which have the same file_path
 	  is shared.
 
@@ -14,7 +20,7 @@
 	* tool/mlimgloader/gdk-pixbuf.c, xlib/x_imagelib.c:
 	  Remote access with curl is supported.
 
-	* tool/mlimgloader/gdiplus.c: Remote access with URLMoniker is supported.
+	* tool/mlimgloader/gdiplus.cpp: Remote access with URLMoniker is supported.
 
 2012-12-24  Araki Ken  <arakiken@users.sf.net>
 
